2012-06-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/worddef.h (isPunc):
	  - Drop unused and meaningless function.

2012-06-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Handle CR (80..A0) non-Thai chars in RTF

	* src/worddef.h (isThai, tis2uni):
	  - Check for Thai more accurately (c > 0xa0, not just c & 0x80).
	* src/filterrtf.cpp (FilterRTF::FilterRTF):
	  - wbr in unicode mode should be escaped, now that UTF-8 interception
	    technique has gone.
	* src/filterrtf.cpp (FilterRTF::GetNextToken):
	  - Distinguish non-Thai in ANSI data bytes.
	* src/filterrtf.cpp (FilterRTF::Print):
	  - Also escape 80..A0 non-Thai chars.
	* src/filterrtf.cpp (PrintEscapedUTF8):
	  - Refactor common code.

2012-06-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/convutil.h, src/convutil.cpp (-ConvCopy):
	  - Remove unused function.

2012-06-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Use UCS as internal storage for third language character support.

	* src/convutil.h, src/convutil.cpp:
	  - Rewrite ConvGetS(), ConvGetC() to return wchar_t (string).
	  - Add ConvPrint() for printing wchar_t string as given encoding
	    scheme (UTF-8/TIS-620).
	  - Add Ascii2WcsCopy() and Ascii2WcsCat() for transferring between
	    ASCII char/wchar_t arrays.

	* src/wordseg.cpp (main):
	  - Drop UTF-8 -> TIS-620 conversion as preprocessing and replace it
	    with ConvGetS(), which gives wchar_t string.
	  - Replace char arrays with wchar_t ones, along with all manipulations.
	* src/wordseg.cpp (WordSegmentation):
	  - Change args from char* to wchar_t*.
	  - No longer requires isUniOut arg, as it now only works on internal
	    UCS storage. The conversion is moved back to higher layer again.
	* src/wordseg.cpp (SplitToken):
	  - Change args from char* to wchar_t*.

	* src/abswordseg.h (class AbsWordSeg):
	  - Redeclare char -> wchar_t:
	    - WordSeg() arg
	    - 'text' member